--- a/capitaoamerica.html
+++ b/capitaoamerica.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homem de Ferro</title>
+  <title>Capitão América</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
   <link rel="preload" href="./css/style.css" as="style">
@@ -47,12 +47,12 @@
   <article class="historia-bg">
     <div class="historia-vingadores">
       <div class="container-vingadores">
-        <p class="titulo-historia center font-xl cor-0">HOMEM DE FERRO</p>
+        <p class="titulo-historia center font-xl cor-0">CAPITÃO AMÉRICA</p>
       </div>
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
-          <img src="media/img/0_avengers-iron-man.png" alt="Imagem Homem de Ferro">
-          <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
+          <img src="media/img/1_avengers-STEVE.png" alt="Imagem Homem de Ferro">
+          <p class="paragrafo cor-0">Um veterano da Segunda Guerra Mundial que foi aprimorado fisicamente através de um soro experimental e congelado antes de acordar no mundo moderno. Evans foi escolhido como parte de um acordo para estrelar três filmes da Marvel, além de Os Vingadores. Evans disse que Steve Rogers é muito mais sombrio em Os Vingadores: "É sobre ele tentando chegar a um acordo com o mundo moderno. Você tem que imaginar, é um choque suficiente aceitar o fato de que você está em um tempo completamente diferente, mas todos que você conhece estão mortos. Todos com quem você se preocupava... Ele era um soldado, obviamente, todos que foram para a batalha com ele, todos os seus companheiros, estão todos mortos. Ele só está solitário. Eu acho que no começo é uma cena de peixe fora d'água, e é difícil. É uma pílula difícil para ele engolir. Em seguida, ele tenta encontrar um equilíbrio com o mundo moderno." Em relação à dinâmica entre Rogers e Tony Stark, Evans disse: "Eu acho que há certamente um atrito entre mim e Tony Stark, eles são pólos opostos. Um cara é flash de holofotes e suave, e o outro cara é altruísta e nas sombras e meio quieto e eles têm que conviver. Eles exploram isso, e é muito divertido".</p>
         </div>
       </div>
       <div class="botao font-s cor-0"><a href="index.html"><p>Voltar</p></a></div>
