--- a/gaviaoarqueiro.html
+++ b/gaviaoarqueiro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homem de Ferro</title>
+  <title>Gavião Arqueiro</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
   <link rel="preload" href="./css/style.css" as="style">
@@ -47,12 +47,12 @@
   <article class="historia-bg">
     <div class="historia-vingadores">
       <div class="container-vingadores">
-        <p class="titulo-historia center font-xl cor-0">HOMEM DE FERRO</p>
+        <p class="titulo-historia center font-xl cor-0">GAVIÃO ARQUEIRO</p>
       </div>
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
-          <img src="media/img/0_avengers-iron-man.png" alt="Imagem Homem de Ferro">
-          <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
+          <img src="media/img/0_avengers-hawkeye.png" alt="Imagem Homem de Ferro">
+          <p class="paragrafo cor-0">Um mestre arqueiro trabalhando como agente da S.H.I.E.L.D., Renner disse que era um papel muito físico e que ele treinou fisicamente e praticou tiro ao arco, tanto quanto possível, em preparação. Sobre o papel, Renner disse: "Quando Eu vi o Homem de Ferro, eu pensei que era uma abordagem realmente kick-ass para super-heróis, então eles me disseram sobre esse personagem, e eu gostei de como ele não era realmente um super-herói, ele é apenas um cara com um conjunto de habilidades. Eu poderia ligar para isso". No que diz respeito atirador mentalidade do Gavião, Renner disse: "É um jogo solitário. Sua única conexão é a personagem de Scarlett, Natasha. É como uma coisa da mão direita e da esquerda, eles coexistem, e você precisa de ambos, especialmente quando se trata de uma missão física". Renner disse que o Gavião Arqueiro não é inseguro sobre sua humanidade. "Muito pelo contrário, ele é o único que pode realmente derrubar o Hulk com suas flechas com ponta de tranquilizantes. Ele conhece suas limitações. Mas tem que haver um sentimento de confiança em qualquer super-herói".</p>
         </div>
       </div>
       <div class="botao font-s cor-0"><a href="index.html"><p>Voltar</p></a></div>
