--- a/hulk.html
+++ b/hulk.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homem de Ferro</title>
+  <title>Hulk</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
   <link rel="preload" href="./css/style.css" as="style">
@@ -47,12 +47,12 @@
   <article class="historia-bg">
     <div class="historia-vingadores">
       <div class="container-vingadores">
-        <p class="titulo-historia center font-xl cor-0">HOMEM DE FERRO</p>
+        <p class="titulo-historia center font-xl cor-0">HULK</p>
       </div>
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
-          <img src="media/img/0_avengers-iron-man.png" alt="Imagem Homem de Ferro">
-          <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
+          <img src="media/img/0_avengers-hulk.png" alt="Imagem Homem de Ferro">
+          <p class="paragrafo cor-0">Um cientista gênio que, por causa da exposição à radiação gama, se transforma em um monstro quando enfurecido ou agitado. Ruffalo, que foi considerado para interpretar Banner em O Incrível Hulk antes de Edward Norton assumiu o papel, foi escolhido depois de negociações entre Marvel e Norton não deram certo. Sobre a substituição de Norton, Ruffalo disse: "Eu sou um amigo de Ed, e sim, que não era uma ótima maneira para Norton ser substituído. Mas a maneira que eu vejo é que Ed ligou essa parte para mim. Eu olho para ele como de minha geração Hamlet". Sobre o personagem, ele disse: "Ele é um cara lutando com dois lados de si mesmo, a escuridão e a luz e tudo o que ele faz em sua vida é filtrado através de questões de controle. Eu cresci com a série de televisão Bill Bixby, que eu pensei que era uma forma humana realmente sutil e real de olhar para o Hulk. Eu gosto que a parte tem essas qualidades". Em relação lugar do Hulk na equipe, Ruffalo disse: "Ele é como nenhum companheiro da equipe e têm certeza do que quer em sua equipe. Ele é um canhão solto. É como jogar uma granada no meio do grupo e vamos esperar ele sair bem!" Esta é a primeira produção em que o ator que interpreta o Hulk também toca Hulk. Ruffalo disse à New York Magazine: "Eu estou realmente animado, ninguém nunca interpretou o Hulk exatamente. Sempre fizeram em CGI e eles vão fazer o avatar em stop-motion, a captura de stop-motion, então eu vou realmente interpretar o Hulk. Isso vai ser divertido". Para criar a a voz do Hulk, a voz de Ruffalo foi misturado com a de Lou Ferrigno e outros. No entanto, apenas a linha de falar do Hulk foi fornecida exclusivamente pelo Ruffalo.</p>
         </div>
       </div>
       <div class="botao font-s cor-0"><a href="index.html"><p>Voltar</p></a></div>
