--- a/index.html
+++ b/index.html
@@ -42,51 +42,61 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-<section class="herois-bg">
-  <div class="herois">
-    <div class="homendeferro">
-      <a href="./homemdeferro.html">
-      <div class="container-img">
-        <img src="media/img/card1.png" alt="">
-        <p class="container-descricao font-s cor-0">Homem de Ferro</p>
       </div>
-      </a>
-    </div>
-      <div class="capitaoamerica">
-        <div class="container-img-1">
-          <img src="media/img/card2.png" alt="">
-          <p class="container-descricao font-s cor-0">Capitão América</p>
+      </section>
+      <section class="herois-bg">
+        <div class="herois">
+          <div class="card homendeferro">
+            <a href="./homemdeferro.html">
+              <div class="container-img">
+                <img src="media/img/card1.png" alt="">
+                <p class="container-descricao font-s cor-0">Homem de Ferro</p>
+              </div>
+            </a>
+          </div>
+          <div class="card capitaoamerica">
+            <a href="./capitaoamerica.html">
+              <div class="container-img-1">
+                <img src="media/img/card2.png" alt="">
+                <p class="container-descricao font-s cor-0">Capitão América</p>
+              </div>
+            </a>
+          </div>
+          <div class="card viuvanegra">
+            <a href="./viuvanegra.html">
+              <div class="container-img-2">
+                <img src="media/img/card3.png" alt="">
+                <p class="container-descricao font-s cor-0">Viúva Negra</p>
+              </div>
+            </a>
+          </div>
+          <div class="card thor">
+            <a href="./thor.html">
+              <div class="container-img-3">
+                <img src="media/img/card4.png" alt="">
+                <p class="container-descricao font-s cor-0">Thor</p>
+              </div>
+            </a>
+          </div>
+          <div class="card gaviaoarqueiro">
+            <a href="./gaviaoarqueiro.html">
+              <div class="container-img-4">
+                <img src="media/img/card5.png" alt="">
+                <p class="container-descricao font-s cor-0">Gavião Arqueiro</p>
+              </div>
+            </a>
+          </div>
+          <div class="card hulk">
+            <a href="./hulk.html">
+              <div class="container-img-5">
+                <img src="media/img/card6.png" alt="">
+                <p class="container-descricao font-s cor-0">Hulk</p>
+              </div>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="viuvanegra">
-        <div class="container-img-2">
-          <img src="media/img/card3.png" alt="">
-          <p class="container-descricao font-s cor-0">Viúva Negra</p>
-        </div>
-      </div>
-      <div class="thor">
-        <div class="container-img-3">
-          <img src="media/img/card4.png" alt="">
-          <p class="container-descricao font-s cor-0">Thor</p>
-        </div>
-      </div>
-      <div class="gaviaoarqueiro">
-        <div class="container-img-4">
-          <img src="media/img/card5.png" alt="">
-          <p class="container-descricao font-s cor-0">Gavião Arqueiro</p>
-        </div>
-      </div>
-      <div class="hulk">
-        <div class="container-img-5">
-          <img src="media/img/card6.png" alt="">
-          <p class="container-descricao font-s cor-0">Hulk</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <article class="historia-bg">
+      </section>
+      <article class="historia-bg">
     <div class="historia">
       <div class="container-historia">
         <p class="titulo-historia font-xl cor-0">História</p>
