--- a/thor.html
+++ b/thor.html
@@ -47,11 +47,11 @@
   <article class="historia-bg">
     <div class="historia-vingadores">
       <div class="container-vingadores">
-        <p class="titulo-historia center font-xl cor-0">HOMEM DE FERRO</p>
+        <p class="titulo-historia center font-xl cor-0">Thor</p>
       </div>
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
-          <img src="media/img/0_avengers-iron-man.png" alt="Imagem Homem de Ferro">
+          <img src="media/img/0_avengers-thor.png" alt="Imagem Homem de Ferro">
           <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
         </div>
       </div>
