--- a/viuvanegra.html
+++ b/viuvanegra.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homem de Ferro</title>
+  <title>Viúva Negra</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
   <link rel="preload" href="./css/style.css" as="style">
@@ -47,12 +47,12 @@
   <article class="historia-bg">
     <div class="historia-vingadores">
       <div class="container-vingadores">
-        <p class="titulo-historia center font-xl cor-0">HOMEM DE FERRO</p>
+        <p class="titulo-historia center font-xl cor-0">VIÚVA NEGRA</p>
       </div>
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
-          <img src="media/img/0_avengers-iron-man.png" alt="Imagem Homem de Ferro">
-          <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
+          <img src="media/img/0_avengers-black-widow.png" alt="Imagem Homem de Ferro">
+          <p class="paragrafo cor-0">Uma espiã altamente treinada trabalhando para a S.H.I.E.L.D. Sobre o personagem e sua relação com o Gavião Arqueiro, Johansson disse: "Nossos personagens têm uma longa história. Eles lutaram juntos por um longo tempo em um monte de batalhas em muitos países diferentes. Os dois membros deste grupo são guerreiros especializados que não têm superpoderes, a Viúva Negra é definitivamente um da equipe, embora ela não está no elenco simplesmente ser uma coisa romântica ou colírio para os olhos, ela está lá para lutar, então eu nunca me senti como se eu fosse a única garota. Todos temos as nossas várias habilidades e eu me sente igual". No que diz respeito a sua formação, Johansson disse: "Mesmo tendo feito Homem de Ferro 2, eu nunca fiz nada parecido antes. Eu nunca tinha sido impulsionada fisicamente em alguma coisa, ou uma parte de algo tão grande. Para Os Vingadores, eu passei muitos meses de treinamento com a nossa equipe de dublês, e lutava contra todos os outros intervenientes. Eu não faço nada, mas luto o tempo todo".</p>
         </div>
       </div>
       <div class="botao font-s cor-0"><a href="index.html"><p>Voltar</p></a></div>
